--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 [Tt]emp/
 [Uu]nityGenerated/
 Logs/*
+.vscode/*
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
@@ -37,6 +38,7 @@ sysinfo.txt
 ._*
 .Spotlight-V100
 .Trashes
+.idea
 Icon?
 ehthumbs.db
 Thumbs.db
